--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "postcss": "^8.5.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.30.3",
     "tailwindcss": "^4.1.18"
   },
